--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "@k4i/my-shared-configs",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "My shared ESLint and Prettier configs",
   "private": true,
   "author": "k4itrun",
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "format": "turbo run format --color",
-    "format:check": "turbo run format:check --color",
-    "build": "turbo run build --color",
-    "publish": "turbo run publish --color",
-    "publish:next": "turbo run publish:next --color",
-    "publish:test": "turbo run publish:test --color",
-    "lint": "turbo run lint --color",
-    "lint:fix": "turbo run lint:fix --color",
+    "format": "turbo run format --color --ui=tui",
+    "format:check": "turbo run format:check --color --ui=tui",
+    "build": "turbo run build --color --ui=tui",
+    "publish": "turbo run publish --color --ui=tui",
+    "publish:next": "turbo run publish:next --color --ui=tui",
+    "publish:test": "turbo run publish:test --color --ui=tui",
+    "lint": "turbo run lint --color --ui=tui",
+    "lint:fix": "turbo run lint:fix --color --ui=tui",
     "int": "prettier --write . --cache --ignore-unknown",
     "int-lint": "eslint --fix .",
     "int:check": "prettier --check .",
