--- a/turbo.json
+++ b/turbo.json
@@ -14,6 +14,15 @@
         },
         "publish:test": {
             "dependsOn": ["build"]
+        },
+        "publish:git": {
+            "dependsOn": ["build"]
+        },
+        "publish:git:next": {
+            "dependsOn": ["build"]
+        },
+        "publish:git:test": {
+            "dependsOn": ["build"]
         }
     }
 }
