--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -1,16 +1,18 @@
 {
   "name": "@k4i/prettier-config",
-  "version": "1.0.5",
+  "version": "1.0.7",
   "description": "My custom Prettier config",
   "author": "k4itrun",
   "license": "MIT",
   "type": "module",
   "exports": {
-    "import": "./dist/esm/src/index.js",
-    "require": "./dist/cjs/src/index.cjs"
+    "import": "./dist/src/index.js",
+    "require": "./dist/src/index.cjs",
+    "types": "./dist/src/index.d.ts"
   },
   "scripts": {
-    "build": "rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
+    "clean": "rimraf dist",
+    "build": "pnpm run clean && rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
     "publish": "pnpm publish --access public --no-git-checks --provenance=false",
     "publish:next": "pnpm publish --access public --no-git-checks --provenance=false --tag next",
     "publish:test": "pnpm publish --access public --no-git-checks --provenance=false --dry-run",
@@ -22,11 +24,10 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
-  "dependencies": {
-    "@rollup/plugin-commonjs": "28.0.2",
-    "@rollup/plugin-typescript": "12.1.2"
-  },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "28.0.3",
+    "@rollup/plugin-typescript": "12.1.2",
+    "rimraf": "^6.0.1",
     "rollup": "4.32.1"
   },
   "peerDependencies": {
